# DrtoolboxLocalServer

./: .continue-here.md  .gitignore  AGENTS.md  DASHBOARD_PLAN.md  DrtoolboxserverPlan.md  HYBRID_API_GUIDE.md  LLM_INTEGRATION_GUIDE.md  QUICKSTART_HYBRID_API.md  README.md  clinic.db  debug_services.py  drtoolbox.service  ingest_all_collections.py  pyproject.toml  requirements.txt
.claude/: settings.json
.omc/: notepad.md  project-memory.json
.planning/: .continue-here.md  HANDOFF.json  HYBRID_API_COMPLETE.md  PHASE4_INFERENCE_FIX.md  PHASE_4_BUILD_SUMMARY.md  PHASE_4_CRITICAL_INFO.md  PHASE_4_EXECUTION_CHECKLIST.md  PHASE_4_INDEX.md  PHASE_4_LOCAL_ONLY.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_TEST_GUIDE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
config/: ingest_config.json  llama_config.json  llama_cuda_config.json  memory_config.json  settings.py
cron/: crontab.txt
data/: Howtouse.md  interactions_2026-05-18.jsonl  interactions_2026-05-19.jsonl  interactions_2026-05-20.jsonl  verified_training_data.jsonl
docs/: clinic_user_guide.md
schema/: clinic.db.sql  medical.db.sql  patient_conversations_table.sql
scripts/: auto_post_to_toolbox.py  build_llama_cuda.sh  daily_restart.sh  evaluate_rag.py  format_articles.py  gpu_layer_optimization.sh  hermes_cli.py  hybrid_query.py  import_marketing_data.py  ingest_all.sh  nightly_fact_check.py  nightly_qa_generator.py  populate_databases.py  prepare_lora_data.py  rebuild_rag.py  run_llama_server.sh  setup_hermes_cron.py  start_server.sh  test_hybrid_api.py  verify_cuda_llama.py  verify_phase4.sh  (+1 more)
(+2587 files in other folders)
