[project]
name = "drtoolbox-local-server"
version = "1.0.0"
description = "Local medical RAG server with dual-collection support"
dependencies = [
    "flask>=2.0",
    "flask-cors>=3.0",
    "pageindex>=0.1.0",
    "requests>=2.28",
    "python-dotenv>=0.19",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
