[project]
name = "drtoolbox-local-server"
version = "1.0.0"
description = "Local medical RAG server with dual-collection support"
dependencies = [
    "flask>=2.0",
    "flask-cors>=3.0",
    "pageindex>=0.1.0",
    "requests>=2.28",
    "python-dotenv>=0.19",
    "pypdf2>=3.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "faster-whisper>=1.0.3",
    "torch>=2.0.0",
    "chromadb>=0.4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
